--- a/index.html
+++ b/index.html
@@ -28,30 +28,32 @@
             <i class="fa-solid fa-bars"></i>
           </button>
           <div class="inner-logo">
-            <a href="index.html">
+            <a href="./index.html">
               <img src="./assets/images/logo.svg" alt="TQD.TRAVEL" />
             </a>
           </div>
           <nav class="inner-menu">
             <ul>
               <li>
-                <a href="index.html" class="active"> Trang chủ </a>
+                <a href="./index.html" class="active"> Trang chủ </a>
               </li>
               <li>
                 <a href="#"> Tour Trong Nước </a>
                 <i class="fa-solid fa-caret-down"></i>
                 <ul>
                   <li>
-                    <a href="#" class="active">Tour Miền Bắc</a>
+                    <a href="./domestic-tours.html" class="active"
+                      >Tour Miền Bắc</a
+                    >
                   </li>
                   <li>
-                    <a href="#">Tour Miền Trung</a>
+                    <a href="./domestic-tours.html">Tour Miền Trung</a>
                   </li>
                   <li>
-                    <a href="#">Tour Miền Nam</a>
+                    <a href="./domestic-tours.html">Tour Miền Nam</a>
                   </li>
                   <li>
-                    <a href="#">Tour Xuyên Việt</a>
+                    <a href="./domestic-tours.html">Tour Xuyên Việt</a>
                   </li>
                 </ul>
               </li>
@@ -60,16 +62,16 @@
                 <i class="fa-solid fa-caret-down"></i>
                 <ul>
                   <li>
-                    <a href="#">Tour Châu Á</a>
+                    <a href="./domestic-tours.html">Tour Châu Á</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Âu</a>
+                    <a href="./domestic-tours.html">Tour Châu Âu</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Mỹ</a>
+                    <a href="./domestic-tours.html">Tour Châu Mỹ</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Úc</a>
+                    <a href="./domestic-tours.html">Tour Châu Úc</a>
                   </li>
                 </ul>
               </li>
@@ -84,7 +86,7 @@
           </nav>
 
           <div class="inner-cart">
-            <a href="#">
+            <a href="./cart.html">
               <i class="fa-solid fa-cart-shopping"></i>
               <span>1</span>
             </a>
@@ -273,7 +275,7 @@
                   <!-- Product Item -->
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
@@ -283,7 +285,9 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
+                        <a href="./tour-details.html">
+                          Hà Nội – Lào Cai – SaPa 4N3Đ
+                        </a>
                       </h3>
                       <div class="inner-prices">
                         <div class="inner-price-old">
@@ -326,7 +330,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-2.jpg" alt="" />
                       </a>
                     </div>
@@ -336,7 +340,7 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#">
+                        <a href="./tour-details.html">
                           Tour 2025 Phú Quốc – Thiên Đường Đảo Ngọc (3N2D)
                         </a>
                       </h3>
@@ -381,7 +385,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-3.jpg" alt="" />
                       </a>
                     </div>
@@ -391,7 +395,7 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#">
+                        <a href="./tour-details.html">
                           Combo Đà Nẵng 2025: ĐÀ NẴNG – HỘI AN – BÀ NÀ HILL
                         </a>
                       </h3>
@@ -436,7 +440,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
@@ -446,7 +450,9 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
+                        <a href="./tour-details.html">
+                          Hà Nội – Lào Cai – SaPa 4N3Đ
+                        </a>
                       </h3>
                       <div class="inner-prices">
                         <div class="inner-price-old">
@@ -489,7 +495,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-2.jpg" alt="" />
                       </a>
                     </div>
@@ -499,7 +505,7 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#">
+                        <a href="./tour-details.html">
                           Tour 2025 Phú Quốc – Thiên Đường Đảo Ngọc (3N2D)
                         </a>
                       </h3>
@@ -544,7 +550,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-3.jpg" alt="" />
                       </a>
                     </div>
@@ -554,7 +560,7 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#">
+                        <a href="./tour-details.html">
                           Combo Đà Nẵng 2025: ĐÀ NẴNG – HỘI AN – BÀ NÀ HILL
                         </a>
                       </h3>
@@ -599,7 +605,7 @@
                 <div class="swiper-slide">
                   <div class="product-item">
                     <div class="inner-image">
-                      <a href="#">
+                      <a href="./tour-details.html">
                         <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
@@ -609,7 +615,9 @@
                     </div>
                     <div class="inner-content">
                       <h3 class="inner-title">
-                        <a href="#"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
+                        <a href="./tour-details.html">
+                          Hà Nội – Lào Cai – SaPa 4N3Đ
+                        </a>
                       </h3>
                       <div class="inner-prices">
                         <div class="inner-price-old">
@@ -672,35 +680,35 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="inner-item">
-                <a href="#">
+                <a href="./tour-details.html">
                   <img src="./assets/images/banner-1.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
-                <a href="#">
+                <a href="./tour-details.html">
                   <img src="./assets/images/banner-2.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
-                <a href="#">
+                <a href="./tour-details.html">
                   <img src="./assets/images/banner-3.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
-                <a href="#">
+                <a href="./tour-details.html">
                   <img src="./assets/images/banner-2.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
-                <a href="#">
+                <a href="./tour-details.html">
                   <img src="./assets/images/banner-3.png" alt="" />
                 </a>
               </div>
@@ -727,7 +735,7 @@
           <!-- Product item -->
           <div class="product-item">
             <div class="inner-image">
-              <a href="#">
+              <a href="./tour-details.html">
                 <img src="./assets/images/product-1.jpg" alt="" />
               </a>
             </div>
@@ -737,7 +745,7 @@
             </div>
             <div class="inner-content">
               <h3 class="inner-title">
-                <a href="#"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
+                <a href="./tour-details.html"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
               </h3>
               <div class="inner-prices">
                 <div class="inner-price-old">
@@ -1156,7 +1164,9 @@
           data-aos-duration="800"
           data-aos-delay="150"
         >
-          <a href="#" class="button-outline"> Xem tất cả </a>
+          <a href="./domestic-tours.html" class="button-outline">
+            Xem tất cả
+          </a>
         </div>
       </div>
     </div>
@@ -1177,7 +1187,7 @@
           <!-- Product item -->
           <div class="product-item">
             <div class="inner-image">
-              <a href="#">
+              <a href="./tour-details.html">
                 <img src="./assets/images/product-1.jpg" alt="" />
               </a>
             </div>
@@ -1187,7 +1197,7 @@
             </div>
             <div class="inner-content">
               <h3 class="inner-title">
-                <a href="#"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
+                <a href="./tour-details.html"> Hà Nội – Lào Cai – SaPa 4N3Đ </a>
               </h3>
               <div class="inner-prices">
                 <div class="inner-price-old">
@@ -1606,7 +1616,9 @@
           data-aos-duration="800"
           data-aos-delay="150"
         >
-          <a href="#" class="button-outline"> Xem tất cả </a>
+          <a href="./domestic-tours.html" class="button-outline">
+            Xem tất cả
+          </a>
         </div>
       </div>
     </div>
@@ -1725,13 +1737,13 @@
           <nav class="inner-links">
             <ul>
               <li>
-                <a href="#">Trang Chủ</a>
+                <a href="./index.html">Trang Chủ</a>
               </li>
               <li>
-                <a href="#">Tour Trong Nước</a>
+                <a href="./domestic-tours.html">Tour Trong Nước</a>
               </li>
               <li>
-                <a href="#">Tour Nước Ngoài</a>
+                <a href="./domestic-tours.html">Tour Nước Ngoài</a>
               </li>
               <li>
                 <a href="#">Tin Tức</a>
@@ -1769,7 +1781,7 @@
         <div class="inner-bottom">
           <div class="inner-copyright">© 2025 TQD. All rights reserved.</div>
           <div class="inner-logo">
-            <a href="index.html">
+            <a href="./index.html">
               <img src="./assets/images/logo.svg" alt="" />
             </a>
           </div>
