Fix href cart page

--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -28,30 +28,32 @@
             <i class="fa-solid fa-bars"></i>
           </button>
           <div class="inner-logo">
-            <a href="index.html">
+            <a href="./index.html">
               <img src="./assets/images/logo.svg" alt="TQD.TRAVEL" />
             </a>
           </div>
           <nav class="inner-menu">
             <ul>
               <li>
-                <a href="index.html" class="active"> Trang chủ </a>
+                <a href="./index.html" class="active"> Trang chủ </a>
               </li>
               <li>
                 <a href="#"> Tour Trong Nước </a>
                 <i class="fa-solid fa-caret-down"></i>
                 <ul>
                   <li>
-                    <a href="#" class="active">Tour Miền Bắc</a>
+                    <a href="./domestic-tours.html" class="active"
+                      >Tour Miền Bắc</a
+                    >
                   </li>
                   <li>
-                    <a href="#">Tour Miền Trung</a>
+                    <a href="./domestic-tours.html">Tour Miền Trung</a>
                   </li>
                   <li>
-                    <a href="#">Tour Miền Nam</a>
+                    <a href="./domestic-tours.html">Tour Miền Nam</a>
                   </li>
                   <li>
-                    <a href="#">Tour Xuyên Việt</a>
+                    <a href="./domestic-tours.html">Tour Xuyên Việt</a>
                   </li>
                 </ul>
               </li>
@@ -60,16 +62,16 @@
                 <i class="fa-solid fa-caret-down"></i>
                 <ul>
                   <li>
-                    <a href="#">Tour Châu Á</a>
+                    <a href="./domestic-tours.html">Tour Châu Á</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Âu</a>
+                    <a href="./domestic-tours.html">Tour Châu Âu</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Mỹ</a>
+                    <a href="./domestic-tours.html">Tour Châu Mỹ</a>
                   </li>
                   <li>
-                    <a href="#">Tour Châu Úc</a>
+                    <a href="./domestic-tours.html">Tour Châu Úc</a>
                   </li>
                 </ul>
               </li>
@@ -83,7 +85,7 @@
           </nav>
 
           <div class="inner-cart">
-            <a href="#">
+            <a href="./cart.html">
               <img src="./assets/images/icon-cart.svg" alt="Cart" />
               <span>1</span>
             </a>
@@ -113,13 +115,13 @@
               </div>
               <div class="inner-product">
                 <div class="inner-image">
-                  <a href="#">
+                  <a href="./tour-details.html">
                     <img src="./assets/images/banner-16.jpg" alt="" />
                   </a>
                 </div>
                 <div class="inner-content">
                   <div class="inner-title">
-                    <a href="#">
+                    <a href="./tour-details.html">
                       Tour Châu Âu Đón Noel | 11N10D | Pháp – Thụy Sĩ – Ý
                     </a>
                   </div>
@@ -302,7 +304,7 @@
           <nav class="inner-links">
             <ul>
               <li>
-                <a href="#">Trang Chủ</a>
+                <a href="./index.html">Trang Chủ</a>
               </li>
               <li>
                 <a href="#">Tour Trong Nước</a>
